added some basic UI interaction